--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <link rel="stylesheet" href="/nft-preview-card-component-main/css/stylesheet.css">
+  <link rel="stylesheet" href="https://github.com/Danielle73/NFT-preview-card-component-solution/blob/main/stylesheet.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
