--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="container">
 <div class="card">
 <div class="img-container">
-    <img class="equilibrium-img" src="image-equilibrium.jpg" alt="Image of a cube">
+    <img class="equilibrium-img" src="solutionimages/image-equilibrium.jpg" alt="Image of a cube">
 
 
 <!--OVERLAY Start-->
