--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!--OVERLAY Start-->
 
 <div class="overlay">
-  <img src="icon-view.svg" alt="eye" class="hover-eye-icon">
+  <img src="solutionimages/icon-view.svg" alt="eye" class="hover-eye-icon">
 <a href="#" class="icon" title="eye-icon"> </a>
 </div>
 </div>
@@ -38,13 +38,13 @@
 
   <p class="intro">Our Equilibrium collection promotes balance and calm.</p>
 
-  <p class="eth"> <img src="icon-ethereum.svg" alt="ethereum-img"> 0.041 ETH </p>
-  <p class="clock"><img src="icon-clock.svg" alt="clock-img"> 3 days left</p>
+  <p class="eth"> <img src="solutionimages/icon-ethereum.svg" alt="ethereum-img"> 0.041 ETH </p>
+  <p class="clock"><img src="solutionimages/icon-clock.svg" alt="clock-img"> 3 days left</p>
   
 <!--END of CARD Text-->
     <hr> 
 
-  <img class="profile-img" src="image-avatar.png" alt="profile picture">
+  <img class="profile-img" src="solutionimages/image-avatar.png" alt="profile picture">
     
     <p class="creator"> Creation of <span><a class="Jules" href="#JulesWyvern">Jules Wyvern</a></span></p>
 
