--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Danielle Lee</a>.
+    Coded by <a href="https://github.com/Danielle73/NFT-preview-card-component-solution" target="_blank">Danielle Lee</a>.
   </div>
 </footer>
 
